--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "form",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.18.1",
+    "npm": "8.19.3"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
